Fix menu icons on small screens

--- a/app/assets/stylesheets/events.css.scss
+++ b/app/assets/stylesheets/events.css.scss
@@ -8,6 +8,20 @@ p.description {
 }
 
 #nav-links{
+  @include breakpoint(small only) {
+    text-align: center;
+
+    i {
+      width: 100%;
+      padding-bottom: 0.5rem;
+    }
+
+    i + span {
+      display: block;
+      height: 2rem;
+    }
+  }
+
   @include breakpoint(medium) {
     margin-bottom: 4rem;
     li a {
